<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Baywatch Notes</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="add_note">Add new Note</string>
    <string name="new_note">Add new Note</string>
    <string name="subject">Subject</string>
    <string name="note">Note</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
	<string name="delete_note">Delete</string>
    <string name="edit_note">Edit</string>
</resources>
